force-app/main/default/objects/Internal_Registration__c/Internal_Registration__c.object-meta.xml
<CustomObject>
    <label>Internal Registration</label>
    <nameField>
        <label>Name EN</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Internal Registrations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>