force-app/main/default/objects/Internal_Registration__c/fields/AgreeStored__c.field-meta.xml
<CustomField>
    <fullName>AgreeStored__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agree Stored</label>
    <type>Checkbox</type>
</CustomField>