force-app/main/default/objects/Internal_Registration__c/fields/Approval_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Approval_Cycle__c</fullName>
    <label>Approval Cycle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>