force-app/main/default/objects/Internal_Registration__c/fields/Approval_FDID__c.field-meta.xml
<CustomField>
    <fullName>Approval_FDID__c</fullName>
    <label>Approval FDID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>