force-app/main/default/objects/Internal_Registration__c/fields/Approval_Opinion__c.field-meta.xml
<CustomField>
    <fullName>Approval_Opinion__c</fullName>
    <label>Approval Opinion</label>
    <length>750</length>
    <type>LongTextArea</type>
</CustomField>