force-app/main/default/objects/Internal_Registration__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>未审批</fullName>
                <default>true</default>
                <label>未审批</label>
            </value>
            <value>
                <fullName>部门审批中</fullName>
            </value>
            <value>
                <fullName>审批通过</fullName>
            </value>
            <value>
                <fullName>审批驳回</fullName>
            </value>
            <value>
                <fullName>部门审批通过</fullName>
            </value>
            <value>
                <fullName>总办审批中</fullName>
            </value>
            <value>
                <fullName>部门审批驳回</fullName>
            </value>
            <value>
                <fullName>高级权限</fullName>
            </value>
            <value>
                <fullName>否决</fullName>
            </value>
            <value>
                <fullName>分管领导/大区总审批中</fullName>
            </value>
            <value>
                <fullName>分管领导/大区总通过</fullName>
            </value>
            <value>
                <fullName>分管领导/大区总驳回</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>