force-app/main/default/objects/Internal_Registration__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <label>Approver</label>
    <type>Email</type>
</CustomField>