force-app/main/default/objects/Internal_Registration__c/fields/AssociateWeight__c.field-meta.xml
<CustomField>
    <fullName>AssociateWeight__c</fullName>
    <formula>IF(ISNULL(Counry__c), 0, 2)
 + IF(ISNULL(Product_Line__c ), 0, 4)
 + IF(ISNULL(Brand__c ), 0, 8)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Associate Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>