force-app/main/default/objects/Internal_Registration__c/fields/Certificate_Type__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Type__c</fullName>
    <inlineHelpText>广交会参展商或采购商</inlineHelpText>
    <label>Certificate Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>参展商证|Exhibition Badge</fullName>
            </value>
            <value>
                <fullName>临时证|Day Voucher</fullName>
            </value>
            <value>
                <fullName>筹展证|Day Voucher for booth construction</fullName>
            </value>
            <value>
                <fullName>撤展证|Day Voucher for booth dismantle</fullName>
            </value>
            <value>
                <fullName>境内采购商证|Domestic Buyer</fullName>
            </value>
            <value>
                <fullName>境外采购商证|Overseas Buyers</fullName>
            </value>
            <value>
                <fullName>采购代表证|Purchasing Agent</fullName>
            </value>
            <value>
                <fullName>翻译证|Translation Certificate</fullName>
            </value>
            <value>
                <fullName>临时证(自购)|Day Voucher(Self-buying)</fullName>
            </value>
            <value>
                <fullName>无|None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>