force-app/main/default/objects/Internal_Registration__c/fields/Certificate_Type_Text__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Type_Text__c</fullName>
    <label>Certificate Type Text</label>
    <type>TextArea</type>
</CustomField>