force-app/main/default/objects/Internal_Registration__c/fields/Company_Abbr__c.field-meta.xml
<CustomField>
    <fullName>Company_Abbr__c</fullName>
    <label>Company Abbr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>