force-app/main/default/objects/Internal_Registration__c/fields/Counry__c.field-meta.xml
<CustomField>
    <fullName>Counry__c</fullName>
    <label>Country/Region</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Exhibition_Country</valueSetName>
    </valueSet>
</CustomField>