force-app/main/default/objects/Internal_Registration__c/fields/Country_EN__c.field-meta.xml
<CustomField>
    <fullName>Country_EN__c</fullName>
    <label>Country/Region EN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>