force-app/main/default/objects/Internal_Registration__c/fields/Current_Visa_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Visa_Status__c</fullName>
    <description>当前持有的证件</description>
    <label>Current Visa Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>工作签-Work Visa</fullName>
            </value>
            <value>
                <fullName>商务签-Business Visa</fullName>
            </value>
            <value>
                <fullName>其他-Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>