force-app/main/default/objects/Internal_Registration__c/fields/Day_Voucher_Date__c.field-meta.xml
<CustomField>
    <fullName>Day_Voucher_Date__c</fullName>
    <description>临时证有效期</description>
    <label>Day Voucher Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>