force-app/main/default/objects/Internal_Registration__c/fields/Deliverable__c.field-meta.xml
<CustomField>
    <fullName>Deliverable__c</fullName>
    <label>Deliverable</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>