force-app/main/default/objects/Internal_Registration__c/fields/Exhibition_Id__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_Id__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Exhibition Name</label>
    <referenceTo>ExpoInfo__c</referenceTo>
    <relationshipLabel>Internal Registrations</relationshipLabel>
    <relationshipName>Expo_Employees</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>