force-app/main/default/objects/Internal_Registration__c/fields/Exhibition_Pass_Type__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_Pass_Type__c</fullName>
    <label>Exhibition Pass Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>境外采购商证|Overseas Buyers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>