force-app/main/default/objects/Internal_Registration__c/fields/ID_Card_No__c.field-meta.xml
<CustomField>
    <fullName>ID_Card_No__c</fullName>
    <description>广交会参展商或采购商</description>
    <label>ID Card No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>