force-app/main/default/objects/Internal_Registration__c/fields/If_Inform__c.field-meta.xml
<CustomField>
    <fullName>If_Inform__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>是否已经提示</inlineHelpText>
    <label>If Inform</label>
    <type>Checkbox</type>
</CustomField>