force-app/main/default/objects/Internal_Registration__c/fields/Is_Valid_Schengen_Visa__c.field-meta.xml
<CustomField>
    <fullName>Is_Valid_Schengen_Visa__c</fullName>
    <defaultValue>false</defaultValue>
    <description>是否需要签证</description>
    <inlineHelpText>是否需要签证</inlineHelpText>
    <label>Is Valid Schengen Visa</label>
    <type>Checkbox</type>
</CustomField>