force-app/main/default/objects/Internal_Registration__c/fields/Is_Valid_US_Schengen_Visa__c.field-meta.xml
<CustomField>
    <fullName>Is_Valid_US_Schengen_Visa__c</fullName>
    <defaultValue>false</defaultValue>
    <description>已换为是否持有境外采购商证</description>
    <inlineHelpText>是否持有境外采购商证</inlineHelpText>
    <label>Is Valid US Visa</label>
    <type>Checkbox</type>
</CustomField>