force-app/main/default/objects/Internal_Registration__c/fields/Is_Verify_Batch__c.field-meta.xml
<CustomField>
    <fullName>Is_Verify_Batch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Verify Batch</label>
    <type>Checkbox</type>
</CustomField>