force-app/main/default/objects/Internal_Registration__c/fields/Last_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Verified_Date__c</fullName>
    <description>最后验证时间</description>
    <label>Last Verified Date</label>
    <type>DateTime</type>
</CustomField>