force-app/main/default/objects/Internal_Registration__c/fields/Name_CN__c.field-meta.xml
<CustomField>
    <fullName>Name_CN__c</fullName>
    <label>Name CN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>