force-app/main/default/objects/Internal_Registration__c/fields/Name_EN__c.field-meta.xml
<CustomField>
    <fullName>Name_EN__c</fullName>
    <formula>Name</formula>
    <label>Name EN Invisible</label>
    <type>Text</type>
</CustomField>