force-app/main/default/objects/Internal_Registration__c/fields/OneDay_Seating__c.field-meta.xml
<CustomField>
    <fullName>OneDay_Seating__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OneDay Seating</label>
    <referenceTo>Seating_Info__c</referenceTo>
    <relationshipLabel>Internal Registrations</relationshipLabel>
    <relationshipName>Internal_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>