force-app/main/default/objects/Internal_Registration__c/fields/Online__c.field-meta.xml
<CustomField>
    <fullName>Online__c</fullName>
    <defaultValue>false</defaultValue>
    <description>是否线上参会</description>
    <label>Online</label>
    <type>Checkbox</type>
</CustomField>