force-app/main/default/objects/Internal_Registration__c/fields/Organization_Abbr__c.field-meta.xml
<CustomField>
    <fullName>Organization_Abbr__c</fullName>
    <description>组织简写(三级)</description>
    <label>Organization Abbr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>