force-app/main/default/objects/Internal_Registration__c/fields/Product_Line_EN__c.field-meta.xml
<CustomField>
    <fullName>Product_Line_EN__c</fullName>
    <label>Product Line EN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>