force-app/main/default/objects/Internal_Registration__c/fields/Purpose_Of_Exhibition__c.field-meta.xml
<CustomField>
    <fullName>Purpose_Of_Exhibition__c</fullName>
    <label>Purpose Of Exhibition</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>客户接待</fullName>
            </value>
            <value>
                <fullName>筹撤展（限项目组）</fullName>
            </value>
            <value>
                <fullName>Decorate Dismantle（Limited Project Team）</fullName>
            </value>
            <value>
                <fullName>产品讲解</fullName>
            </value>
            <value>
                <fullName>Product Explanation</fullName>
            </value>
            <value>
                <fullName>竞品调研</fullName>
            </value>
            <value>
                <fullName>Competitive Product Research</fullName>
            </value>
            <value>
                <fullName>公关/法务/行政/IT等</fullName>
            </value>
            <value>
                <fullName>Public  Relations/Legal/Administrative /IT, etc</fullName>
            </value>
            <value>
                <fullName>Customer Communication</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>