force-app/main/default/objects/Internal_Registration__c/fields/Remark1__c.field-meta.xml
<CustomField>
    <fullName>Remark1__c</fullName>
    <label>Remark1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>