force-app/main/default/objects/Internal_Registration__c/fields/Validity_Date__c.field-meta.xml
<CustomField>
    <fullName>Validity_Date__c</fullName>
    <description>供临时证记录使用的日期</description>
    <label>Validity Date</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>04-15</fullName>
            </value>
            <value>
                <fullName>04-16</fullName>
            </value>
            <value>
                <fullName>04-17</fullName>
            </value>
            <value>
                <fullName>04-18</fullName>
            </value>
            <value>
                <fullName>04-19</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>