force-app/main/default/objects/Internal_Registration__c/fields/Verify_Result__c.field-meta.xml
<CustomField>
    <fullName>Verify_Result__c</fullName>
    <label>Verify Result</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>