force-app/main/default/objects/Internal_Registration__c/fields/Visa_Information_Required__c.field-meta.xml
<CustomField>
    <fullName>Visa_Information_Required__c</fullName>
    <description>办证时留存的证书信息：工作签、商务签、其他</description>
    <label>Visa Information Required for Pass</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>工作签-Work Visa</fullName>
            </value>
            <value>
                <fullName>商务签-Business Visa</fullName>
            </value>
            <value>
                <fullName>其他-Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>