force-app/main/default/objects/Internal_Registration__c/fields/XHNumber__c.field-meta.xml
<CustomField>
    <fullName>XHNumber__c</fullName>
    <inlineHelpText>LDAP账号,邮箱@之前的部分</inlineHelpText>
    <label>XHNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>