force-app/main/default/objects/Internal_Registration__c/fields/Your_Resident_city__c.field-meta.xml
<CustomField>
    <fullName>Your_Resident_city__c</fullName>
    <label>Your Resident city</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>青岛-Qingdao</fullName>
            </value>
            <value>
                <fullName>顺德-Shunde</fullName>
            </value>
            <value>
                <fullName>国内其他城市-Other cities in China</fullName>
            </value>
            <value>
                <fullName>海外-Overseas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>