force-app/main/default/objects/Internal_Registration__c/listViews/Canton_Fair_135.listView-meta.xml
<ListView>
    <fullName>Canton_Fair_135</fullName>
    <columns>NAME</columns>
    <columns>Name_CN__c</columns>
    <columns>Email__c</columns>
    <columns>ContactEmail__c</columns>
    <columns>Exhibition_Name_EN__c</columns>
    <columns>Company_Abbr__c</columns>
    <columns>Department_Name__c</columns>
    <columns>Certificate_Type__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Exhibition_Name_EN__c</field>
        <operation>contains</operation>
        <value>135</value>
    </filters>
    <label>135 Canton Fair</label>
</ListView>