force-app/main/default/objects/Internal_Registration__c/listViews/Copy_of_136th_canton_fair.listView-meta.xml
<ListView>
    <fullName>Copy_of_136th_canton_fair</fullName>
    <columns>NAME</columns>
    <columns>Name_CN__c</columns>
    <columns>Email__c</columns>
    <columns>ContactEmail__c</columns>
    <columns>Approver__c</columns>
    <columns>Company__c</columns>
    <columns>Department_Name__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>Position__c</columns>
    <columns>Purpose_Of_Exhibition__c</columns>
    <columns>Deliverable__c</columns>
    <columns>Company_Abbr__c</columns>
    <columns>Is_Valid_US_Schengen_Visa__c</columns>
    <columns>OneDay_Seating__c</columns>
    <columns>TwoDay_Seating__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Exhibition_Name_EN__c</field>
        <operation>contains</operation>
        <value>25</value>
    </filters>
    <label>Hisense International 2025 Annual Market</label>
</ListView>