force-app/main/default/objects/Internal_Registration__c/listViews/Copy_of_All_136thcantonfair.listView-meta.xml
<ListView>
    <fullName>Copy_of_All_136thcantonfair</fullName>
    <columns>NAME</columns>
    <columns>Name_CN__c</columns>
    <columns>Email__c</columns>
    <columns>ContactEmail__c</columns>
    <columns>Company_Abbr__c</columns>
    <columns>Department_Name__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Exhibition_Name_EN__c</columns>
    <columns>Certificate_Type__c</columns>
    <columns>Position__c</columns>
    <columns>Counry__c</columns>
    <columns>Purpose_Of_Exhibition__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Exhibition_Name_EN__c</field>
        <operation>contains</operation>
        <value>136</value>
    </filters>
    <label>136th canton fair</label>
</ListView>