force-app/main/default/objects/Internal_Registration__c/listViews/Copy_of_All_2024IFA.listView-meta.xml
<ListView>
    <fullName>Copy_of_All_2024IFA</fullName>
    <columns>NAME</columns>
    <columns>Name_CN__c</columns>
    <columns>Phone__c</columns>
    <columns>Email__c</columns>
    <columns>ContactEmail__c</columns>
    <columns>Company_Abbr__c</columns>
    <columns>Product_Line_EN__c</columns>
    <columns>Deliverable__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Product_Line__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Exhibition_Id__c</field>
        <operation>contains</operation>
        <value>IFA</value>
    </filters>
    <label>2024IFA</label>
</ListView>