force-app/main/default/objects/Internal_Registration__c/listViews/Copy_of_Demo.listView-meta.xml
<ListView>
    <fullName>Copy_of_Demo</fullName>
    <columns>NAME</columns>
    <columns>Name_CN__c</columns>
    <columns>Email__c</columns>
    <columns>XHNumber__c</columns>
    <columns>ContactEmail__c</columns>
    <columns>Company__c</columns>
    <columns>Approver__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>Company_Abbr__c</columns>
    <columns>Certificate_Type__c</columns>
    <columns>Validity_Date__c</columns>
    <columns>Department_Name__c</columns>
    <columns>Position__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Exhibition_Id__c</field>
        <operation>contains</operation>
        <value>137</value>
    </filters>
    <label>137 Canton Fair</label>
</ListView>