force-app/main/default/objects/Internal_Registration__c/listViews/SMSANDEMAIL.listView-meta.xml
<ListView>
    <fullName>SMSANDEMAIL</fullName>
    <columns>NAME</columns>
    <columns>Name_CN__c</columns>
    <columns>Approver__c</columns>
    <columns>Company__c</columns>
    <columns>Certificate_Type__c</columns>
    <columns>Validity_Date__c</columns>
    <columns>If_Cancel__c</columns>
    <columns>Passport_No__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Exhibition_Id__c</field>
        <operation>contains</operation>
        <value>137</value>
    </filters>
    <label>Certificate configuration</label>
</ListView>