force-app/main/default/objects/Internal_Registration__c/listViews/X138th_Autumn_Fair.listView-meta.xml
<ListView>
    <fullName>X138th_Autumn_Fair</fullName>
    <columns>NAME</columns>
    <columns>Approval_Status__c</columns>
    <columns>Your_Resident_city__c</columns>
    <columns>XHNumber__c</columns>
    <columns>Name_CN__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Exhibition_Id__c</field>
        <operation>contains</operation>
        <value>138</value>
    </filters>
    <label>138th Autumn Fair</label>
</ListView>