force-app/main/default/objects/Internal_Registration__c/listViews/X2025IFA.listView-meta.xml
<ListView>
    <fullName>X2025IFA</fullName>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Name_CN__c</columns>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>XHNumber__c</columns>
    <columns>ContactEmail__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>Company__c</columns>
    <columns>Company_Abbr__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Exhibition_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Exhibition_Id__c</field>
        <operation>contains</operation>
        <value>2025IFA</value>
    </filters>
    <label>2025IFA</label>
</ListView>